--- a/lang-portal/backend-fastapi/alembic.ini
+++ b/lang-portal/backend-fastapi/alembic.ini
@@ -48,7 +48,7 @@ version_locations = %(here)s/versions
 # version_path_separator = :
 # version_path_separator = ;
 # version_path_separator = space
-version_path_separator = os  # Use os.pathsep. Default configuration used for new projects.
+version_path_separator = os
 
 # set to 'true' to search source files recursively
 # in each "version_locations" directory
@@ -59,6 +59,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
+# The SQLAlchemy URL is configured in env.py using settings from config.py
 sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
