--- a/lang-portal/backend-fastapi/pyproject.toml
+++ b/lang-portal/backend-fastapi/pyproject.toml
@@ -1,4 +1,3 @@
-
 # uv pip install -e ".[dev]"
 
 [project]
@@ -119,9 +118,6 @@ exclude_lines = [
     "raise ImportError",
 ]
 
-# Add this section to specify where our package files are
-[tool.hatch.build]
-packages = ["src"]
-
+# Add the correct package configuration
 [tool.hatch.build.targets.wheel]
 packages = ["app"] 
