moved alembic versions folder

--- a/lang-portal/backend-fastapi/alembic.ini
+++ b/lang-portal/backend-fastapi/alembic.ini
@@ -38,7 +38,7 @@ sourceless = false
 # to alembic/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path.
 # The path separator used here should be the separator specified by "version_path_separator" below.
-version_locations = %(here)s/versions
+version_locations = %(here)s/alembic/versions
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses os.pathsep.
