--- a/lang-portal/backend-fastapi/pyproject.toml
+++ b/lang-portal/backend-fastapi/pyproject.toml
@@ -56,6 +56,7 @@ dev = [
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
+asyncio_default_fixture_loop_scope = "function"
 python_files = ["test_*.py"]
 addopts = [
     "--verbose",
