--- a/lang-portal/frontend-react/package.json
+++ b/lang-portal/frontend-react/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.0",
