build and deployment system for games, extraction of shared code between frontend and games to shared npm library

--- a/lang-portal/.gitignore
+++ b/lang-portal/.gitignore
@@ -53,8 +53,7 @@ alembic/versions/*
 !alembic/versions/.gitkeep
 
 # Frontend
-node_modules/
-frontend/node_modules/
+**/node_modules/
 frontend/dist/
 frontend/build/
 frontend/coverage/
