--- a/lang-portal/games/typing-tutor/tsconfig.json
+++ b/lang-portal/games/typing-tutor/tsconfig.json
@@ -12,12 +12,12 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@shared/*": ["../../shared/*"]
+      "@lang-portal/shared/*": ["../../shared/*"]
     }
   },
   "include": ["src"],
