--- a/lang-portal/package.json
+++ b/lang-portal/package.json
@@ -7,6 +7,7 @@
   ],
   "scripts": {
     "build:shared": "yarn workspace @lang-portal/shared build",
-    "build:games": "yarn workspaces foreach -p run build"
+    "build:games": "yarn workspaces foreach -p run build && node scripts/build-games.js",
+    "dev:games": "yarn build:shared && yarn build:games"
   }
 } 
