--- a/lang-portal/games/kanji-snake/package.json
+++ b/lang-portal/games/kanji-snake/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@lang-portal/shared": "*",
+    "phaser": "^3.88.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -26,4 +27,4 @@
     "typescript": "^5.2.0",
     "vite": "^5.0.0"
   }
-} 
+}
