--- a/lang-portal/package.json
+++ b/lang-portal/package.json
@@ -2,12 +2,16 @@
   "name": "lang-portal",
   "private": true,
   "workspaces": [
+    "frontend-react",
     "shared",
     "games/*"
   ],
   "scripts": {
     "build:shared": "yarn workspace @lang-portal/shared build",
     "build:games": "node scripts/build-games.js",
-    "dev:games": "yarn build:shared && yarn build:games"
+    "dev:games": "node scripts/build-games.js --watch"
+  },
+  "devDependencies": {
+    "chokidar": "^4.0.3"
   }
-} 
+}
