--- a/listening-comp/pyproject.toml
+++ b/listening-comp/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "streamlit>=1.31.0",
     "tinydb>=4.8.0",
+    "mutagen>=1.46.0",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
