--- a/listening-comp/pyproject.toml
+++ b/listening-comp/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "streamlit>=1.31.0",
     "tinydb>=4.8.0",
     "mutagen>=1.46.0",
+    "openai>=1.12.0",
+    "python-dotenv>=1.0.0",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
