--- a/opea-comps/.env.example
+++ b/opea-comps/.env.example
@@ -1,8 +1,15 @@
-# OpenAI API Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# OPEA Configuration
+OPEA_MODEL_PATH=/path/to/your/model
+OPEA_MODEL_NAME=Qwen2.5-Coder-14B-Instruct  # Default model name
 
-# Audio Processing Settings
-# Uncomment and set these if you want to override defaults
-# MAX_AUDIO_DURATION_SECONDS=1800  # 30 minutes
-# WHISPER_MODEL=whisper-1
-# GPT_MODEL=gpt-4-turbo
+# GPU Configuration
+CUDA_VISIBLE_DEVICES=0  # Specify which GPU to use
+GPU_MEMORY_UTILIZATION=0.9  # Maximum GPU memory utilization (0.0-1.0)
+
+# Application Settings
+STREAMLIT_SERVER_PORT=8501
+STREAMLIT_SERVER_HEADLESS=true
+STREAMLIT_BROWSER_GATHER_USAGE_STATS=false
+
+# Logging Configuration
+LOG_LEVEL=INFO  # DEBUG, INFO, WARNING, ERROR, CRITICAL
