--- a/opea-comps/.env.example
+++ b/opea-comps/.env.example
@@ -1,6 +1,6 @@
 # OPEA Configuration
-OPEA_MODEL_PATH=/path/to/your/model
-OPEA_MODEL_NAME=Qwen2.5-Coder-14B-Instruct  # Default model name
+OPEA_MODEL_PATH=./models/Meta-Llama-3.2-3B-Instruct-Q6_K_L.gguf
+OPEA_MODEL_NAME=Meta-Llama-3.2:3B  # Default model name
 
 # GPU Configuration
 CUDA_VISIBLE_DEVICES=0  # Specify which GPU to use
