--- a/opea-comps/pyproject.toml
+++ b/opea-comps/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "streamlit>=1.31.0",
     "requests>=2.31.0",
     "python-dotenv>=1.0.0",
+    "opea>=0.9.0",
+    "genai-bridge>=0.9.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
