--- a/visual-novel/.env.example
+++ b/visual-novel/.env.example
@@ -1,5 +1,33 @@
-# OpenAI API Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# Application settings
+DEBUG=false
+STREAMLIT_SERVER_PORT=8501
+STREAMLIT_SERVER_HEADLESS=true
+
+# OpenAI API settings (required for dynamic dialog generation)
+OPENAI_API_KEY=your_api_key_here
+OPENAI_MODEL=gpt-4-turbo
+
+# Paths
+ASSETS_PATH=assets
+DATA_PATH=data
+STATIC_PATH=static
+
+# Game settings
+DEFAULT_LANGUAGE_LEVEL=beginner
+MAX_DIALOG_HISTORY=50
+ENABLE_DYNAMIC_DIALOG=true
+
+# Japanese language settings
+FURIGANA_ENABLED=true
+ROMAJI_ENABLED=true
+
+# Database settings
+GAME_SAVES_PATH=data/game_saves
+VOCABULARY_PATH=data/vocabulary.json
+
+# Logging
+LOG_LEVEL=INFO
+LOG_FILE=app.log
 
 # Audio Processing Settings
 # Uncomment and set these if you want to override defaults
