--- a/visual-novel/pyproject.toml
+++ b/visual-novel/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = {text = "MIT"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Robert C. Gray", email = "gray@graycode.com"}
 ]
 dependencies = [
     # Core dependencies
@@ -44,6 +44,10 @@ dev = [
     # Type stubs
     "types-requests==2.31.0.10",
 ]
+
+[tool.setuptools.packages.find]
+include = ["app*"]
+exclude = ["dev*", "tests*", "scripts*", "docs*"]
 
 [tool.ruff]
 # Enable pycodestyle (E), Pyflakes (F), isort (I), and black (B) rules
