working to get hot-reloading working on vite server (phaser game) inside streamlit app.  still not working perfectly, but progress for now

--- a/visual-novel/phaser_game/package.json
+++ b/visual-novel/phaser_game/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "streamlit": "npm run build && cd .. && uv run streamlit run app/main.py",
-    "watch": "vite --watch",
+    "watch": "vite",
     "dev:streamlit": "cd .. && ./scripts/dev.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
