Initial implementation of the LLMService and the integration into the Study Page

--- a/visual-novel/.env.example
+++ b/visual-novel/.env.example
@@ -3,10 +3,15 @@ DEBUG=false
 STREAMLIT_SERVER_PORT=8501
 STREAMLIT_SERVER_HEADLESS=true
 
-# OpenAI API settings (required for dynamic dialog generation)
-OPENAI_API_KEY=your_api_key_here
-OPENAI_MODEL=gpt-4-turbo
+# OpenAI API Configuration
+LLM_API_KEY=your_openai_api_key_here
+LLM_API_BASE_URL=https://api.openai.com/v1
+LLM_MODEL=gpt-4
 
+# To use a local LLM provider (like LM Studio, Ollama, etc.), use settings like these:
+# LLM_API_KEY=not-needed  # Many local providers don't need an API key
+# LLM_API_BASE_URL=http://localhost:8000/v1  # Local model API endpoint
+# LLM_MODEL=llama-3-8b  # Name of the local model
 # Paths
 ASSETS_PATH=assets
 DATA_PATH=data
