--- a/visual-novel/phaser_game/package.json
+++ b/visual-novel/phaser_game/package.json
@@ -16,10 +16,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "openai": "^4.87.4",
     "phaser": "^3.88.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "dotenv": "^16.4.7",
     "typescript": "^5.8.2",
     "vite": "^6.2.1"
   }
