benchmarked OpenAI queries for study scene in .env.example

--- a/visual-novel/server/.env.example
+++ b/visual-novel/server/.env.example
@@ -4,7 +4,13 @@ PORT=3000
 # LLM API configuration
 LLM_API_KEY=your_api_key_here
 LLM_API_BASE_URL=https://api.openai.com/v1
-LLM_MODEL=gpt-4
+LLM_MODEL=o3-mini
+
+# Current Pricing per 1M tokens (as of 2025-03-20)
+# gpt-4o:       $2.50  # full response, all content, ~47s
+# o1-mini:      $1.10  # ok response, cultural/learning tips unpredictable, ~43s
+# o3-mini:      $1.10  # ok response, cultural/learning tips unpredictable, ~40s
+# gpt-4o-mini:  $0.15  # ok response, cultural/learning tips unpredictable, ~46s
 
 # To use a local LLM provider (like LM Studio, Ollama, etc.), use settings like these:
 #LLM_API_KEY=not-needed  # Many local providers don't need an API key
@@ -19,7 +25,7 @@ LLM_MODEL=gpt-4
 LLM_ENDPOINT_PATH=chat/completions
 
 # Request timeout in milliseconds
-REQUEST_TIMEOUT_MS=30000
+REQUEST_TIMEOUT_MS=60000
 
 # Debug settings
 # Set to 'true' to see detailed request/response logs
