Added Docker containerization and helper scripts for all projects

--- a/opea-comps/backend/docker/Dockerfile
+++ b/opea-comps/backend/docker/Dockerfile
@@ -9,14 +9,14 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 # Copy requirements file
-COPY backend/requirements.txt .
+COPY opea-comps/backend/requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the backend code
-COPY backend/chatqna /app/chatqna
-COPY backend/config /app/config
+COPY opea-comps/backend/chatqna /app/chatqna
+COPY opea-comps/backend/config /app/config
 
 # Set environment variables
 ENV PYTHONPATH=/app
