--- a/visual-novel/phaser_game/tsconfig.json
+++ b/visual-novel/phaser_game/tsconfig.json
@@ -12,7 +12,7 @@
     "noEmit": true,
     "strict": true,
     "noUnusedLocals": false,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"]
