updated Docker to support MacOS

--- a/opea-comps/backend/docker/Dockerfile
+++ b/opea-comps/backend/docker/Dockerfile
@@ -16,7 +16,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the backend code
 COPY opea-comps/backend/chatqna /app/chatqna
-COPY opea-comps/backend/config /app/config
+# COPY opea-comps/backend/config /app/config # This directory does not exist and appears unused
 
 # Set environment variables
 ENV PYTHONPATH=/app
@@ -26,4 +26,4 @@ ENV PYTHONUNBUFFERED=1
 EXPOSE 8888
 
 # Run the ChatQnA service
-CMD ["python", "-m", "chatqna.service"] 
+CMD ["python", "-m", "chatqna.service"]
